# DIANJI

./: .gitignore  LICENSE  README.md  export.py  pyproject.toml  requirements.txt  test.py  train.py
.github/workflows/: django.yml
