[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zhichong-ai-models"
version = "0.1.0"
description = "YOLO vision and YAMNet audio services for the Zhichong pet monitoring project."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "pydantic>=2.7",
  "pyyaml>=6.0",
  "opencv-python>=4.9",
  "ultralytics>=8.2",
  "tensorflow>=2.15",
  "tensorflow-hub>=0.16",
  "librosa>=0.10",
  "soundfile>=0.12"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.5"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
